Fix icon alignment

--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  line-height: 1.5em;
+  display: flex;
   font-size: 5em;
   color: white;
   height: 166px;
